# TGPlaceholderBot

./: pyproject.toml
.github/workflows/: ci.yml
etc/conf.d/: tg_placeholder_bot
etc/systemd/system/: tg_placeholder_bot.service
tgplaceholderbot/: __main__.py
