[tool.poetry]
name = "tgplaceholderbot"
version = "0.0.1"
description = "Бот заглушка"
authors = ["Alexander Romanov <alexo@live.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Telethon = "^1.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
